<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

    <LinearLayout
        android:id="@+id/RankingFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical" tools:ignore="ScrollViewSize">

        <!-- It shows when there's no data -->

        <RelativeLayout
                android:id="@+id/RankingFragmentEmptyView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <ImageView
                    android:contentDescription="@string/booksRanking"
                    android:id="@+id/rankingFragmentListEmptyViewImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ranking_icon"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rankingFragmentListEmptyViewImage"
                    android:layout_centerInParent="true"
                    android:text="@string/empty"/>
        </RelativeLayout>

        <!-- Begin of Main Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start">

                <ImageView
                        android:id="@+id/RankingFragmentImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxWidth="120dp"
                        android:maxHeight="200dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/cover"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:paddingLeft="10dp" tools:ignore="RtlSymmetry">

            <TextView
                    android:id="@+id/RankingFragmentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/brown"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/RankingFragmentAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/RankingFragmentISBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/RankingFragmentRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/RankingFragmentFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"
                android:layout_gravity="center"
                android:drawablePadding="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/actionBarColor"/>

        <TextView
                android:id="@+id/RankingFragmentPriceListDesc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ListView
                    android:id="@+id/RankingFragmentPriceList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </ListView>

        <TextView
                android:id="@+id/RankingFragmentDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>

        </LinearLayout>
        <!-- End of Main Layout -->
    </LinearLayout>
</ScrollView>